05-flex-modal: Separate icon from content by using a container div & fix alignment and layout issues

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -15,11 +15,20 @@ body {
   justify-content: center;
 }
 
+.header  {
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
 .modal {
+  display: flex;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  gap: 16px
 }
 
 .icon {
@@ -33,9 +42,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+.header-sub {
+  display: flex;
 }
 
 .close-button {
+  margin-left: auto;
   background: #eee;
   border-radius: 50%;
   color: #888;
@@ -48,6 +63,10 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.text {
+  margin-bottom: 12px;
 }
 
 button {
